Added framer motion

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Temidayo Oyewo portfolio website"
     />
+    <meta property="twitter:image" content="Twitter link preview image URL">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Temidayo Oyewo portfolio">
+    <meta property="twitter:description" content="Temidayo is a full-stack developer, skilled at creating business applications- Mobile and web, system applications and API Integrations">
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.jpg">
+    <meta property="og:description" content="Temidayo is a full-stack developer, skilled at creating business applications- Mobile and web, system applications and API Integrations" />
+    <meta property="og:url" content="https://oyewodayo.com">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
